# kokkos-devcontainer

./: CMakeLists.txt  README.md  example.cpp
.devcontainer/nvhpc/: Dockerfile
